--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,17 @@
   height: 40px;
 }
 
+.no-input{
+  padding: 10px;
+  height: 40px;
+  border: 0px;
+}
+
+.no-input:focus{
+  border:0px !important;
+  box-shadow: none !important;
+}
+
 .button:hover{
   background-color: gray;
   color: white; 
@@ -34,5 +45,5 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
+  align-items: center;
 }
