--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 #hr{
-  border-top: 3px solid black;
+  border: 2px solid #000000;
+  background-color: #000000;
 }
 
 .container{
   margin-bottom: 60px;
-  width: 60%;
+  max-width: 60% !important;
 }
 
 .row{
@@ -18,6 +19,10 @@
   border-radius: 10px;
   padding: 0 25px;
   transition: 0.3s;
+}
+
+input{
+  font-size: large;
 }
 
 .input{
@@ -36,8 +41,7 @@
 }
 
 .no-input:focus{
-  border:0px !important;
-  box-shadow: none !important;
+  outline: none;
 }
 
 .button:hover{
@@ -50,4 +54,32 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+@media only screen and (max-width: 850px) {
+  .container {
+    max-width: 80% !important;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    max-width: 96% !important;
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  .task_btn {
+    display: flex;
+    flex-direction: column;
+    height: inherit;
+  }
+  .task_name{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .first{
+    margin-bottom: 10px;
+  }
 }
