--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,13 @@ input{
   align-items: center;
 }
 
+.nodata{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 @media only screen and (max-width: 850px) {
   .container {
     max-width: 80% !important;
